--- a/net-snmp/man/netsnmp_container.3
+++ b/net-snmp/man/netsnmp_container.3
@@ -1,8 +1,8 @@
-.TH "container" 3 "23 May 2010" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
+.TH "container" 3 "Fri May 6 2011" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-container \- Net-SNMP null container
+container \- 
 .SS "Modules"
 
 .in +1c
