--- a/net-snmp/man/netsnmp_data_list.3
+++ b/net-snmp/man/netsnmp_data_list.3
@@ -1,4 +1,4 @@
-.TH "generic linked-list data handling with a string as a key." 3 "23 May 2010" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
+.TH "generic linked-list data handling with a string as a key." 3 "Fri May 6 2011" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -9,7 +9,7 @@ generic linked-list data handling with a string as a key. \-
 .ti -1c
 .RI "NETSNMP_INLINE void \fBnetsnmp_free_list_data\fP (\fBnetsnmp_data_list\fP *\fBnode\fP)"
 .br
-.RI "\fIfrees the data and a name at a given data_list \fBnode\fP. \fP"
+.RI "\fIfrees the data and a name at a given data_list node. \fP"
 .ti -1c
 .RI "NETSNMP_INLINE void \fBnetsnmp_free_all_list_data\fP (\fBnetsnmp_data_list\fP *head)"
 .br
@@ -17,7 +17,7 @@ generic linked-list data handling with a string as a key. \-
 .ti -1c
 .RI "NETSNMP_INLINE \fBnetsnmp_data_list\fP * \fBnetsnmp_create_data_list\fP (const char *name, void *data, Netsnmp_Free_List_Data *beer)"
 .br
-.RI "\fIadds creates a data_list \fBnode\fP given a name, data and a free function ptr. \fP"
+.RI "\fIadds creates a data_list node given a name, data and a free function ptr. \fP"
 .ti -1c
 .RI "NETSNMP_INLINE void \fBnetsnmp_add_list_data\fP (\fBnetsnmp_data_list\fP **head, \fBnetsnmp_data_list\fP *\fBnode\fP)"
 .br
@@ -37,11 +37,11 @@ generic linked-list data handling with a string as a key. \-
 .ti -1c
 .RI "NETSNMP_INLINE \fBnetsnmp_data_list\fP * \fBnetsnmp_get_list_node\fP (\fBnetsnmp_data_list\fP *head, const char *name)"
 .br
-.RI "\fIreturns a data_list \fBnode\fP for a given name within a data_list \fP"
+.RI "\fIreturns a data_list node for a given name within a data_list \fP"
 .ti -1c
 .RI "int \fBnetsnmp_remove_list_node\fP (\fBnetsnmp_data_list\fP **realhead, const char *name)"
 .br
-.RI "\fIRemoves a named \fBnode\fP from a data_list (and frees it). \fP"
+.RI "\fIRemoves a named node from a data_list (and frees it) \fP"
 .ti -1c
 .RI "void \fBnetsnmp_register_save_list\fP (\fBnetsnmp_data_list\fP **datalist, const char *type, const char *token, Netsnmp_Save_List_Data *data_list_save_ptr, Netsnmp_Read_List_Data *data_list_read_ptr, Netsnmp_Free_List_Data *data_list_free_ptr)"
 .br
@@ -61,7 +61,7 @@ generic linked-list data handling with a string as a key. \-
 .in -1c
 .SH "Function Documentation"
 .PP 
-.SS "NETSNMP_INLINE void netsnmp_add_list_data (\fBnetsnmp_data_list\fP ** head, \fBnetsnmp_data_list\fP * node)"
+.SS "NETSNMP_INLINE void netsnmp_add_list_data (\fBnetsnmp_data_list\fP **head, \fBnetsnmp_data_list\fP *node)"
 .PP
 adds data to a datalist depreciated: use \fBnetsnmp_data_list_add_node()\fP
 .PP
@@ -72,19 +72,19 @@ netsnmp_data_list_add_node is preferred
 .PP
 \fBParameters:\fP
 .RS 4
-\fIhead\fP a pointer to the head \fBnode\fP of a data_list 
+\fIhead\fP a pointer to the head node of a data_list 
 .br
-\fI\fBnode\fP\fP a \fBnode\fP to stash in the data_list 
+\fInode\fP a node to stash in the data_list 
 .RE
 .PP
 
 .PP
-Definition at line 83 of file data_list.c.
-.SS "NETSNMP_INLINE \fBnetsnmp_data_list\fP* netsnmp_create_data_list (const char * name, void * data, Netsnmp_Free_List_Data * beer)"
+Definition at line 87 of file data_list.c.
+.SS "NETSNMP_INLINE \fBnetsnmp_data_list\fP* netsnmp_create_data_list (const char *name, void *data, Netsnmp_Free_List_Data *beer)"
 .PP
-adds creates a data_list \fBnode\fP given a name, data and a free function ptr. \fBParameters:\fP
+adds creates a data_list node given a name, data and a free function ptr. \fBParameters:\fP
 .RS 4
-\fIname\fP the name of the \fBnode\fP to cache the data. 
+\fIname\fP the name of the node to cache the data. 
 .br
 \fIdata\fP the data to be stored under that name 
 .br
@@ -93,7 +93,7 @@ adds creates a data_list \fBnode\fP given a name, data and a free function ptr. 
 .PP
 \fBReturns:\fP
 .RS 4
-a newly created data_list \fBnode\fP which can be given to the netsnmp_add_list_data function. 
+a newly created data_list node which can be given to the netsnmp_add_list_data function. 
 .RE
 .PP
 
@@ -103,13 +103,13 @@ a newly created data_list \fBnode\fP which can be given to the netsnmp_add_list_
 \fBdelayed_instance.c\fP.
 .PP
 Definition at line 60 of file data_list.c.
-.SS "NETSNMP_INLINE \fBnetsnmp_data_list\fP* netsnmp_data_list_add_data (\fBnetsnmp_data_list\fP ** head, const char * name, void * data, Netsnmp_Free_List_Data * beer)"
+.SS "NETSNMP_INLINE \fBnetsnmp_data_list\fP* netsnmp_data_list_add_data (\fBnetsnmp_data_list\fP **head, const char *name, void *data, Netsnmp_Free_List_Data *beer)"
 .PP
 adds data to a datalist \fBParameters:\fP
 .RS 4
-\fIhead\fP a pointer to the head \fBnode\fP of a data_list 
+\fIhead\fP a pointer to the head node of a data_list 
 .br
-\fIname\fP the name of the \fBnode\fP to cache the data. 
+\fIname\fP the name of the node to cache the data. 
 .br
 \fIdata\fP the data to be stored under that name 
 .br
@@ -118,81 +118,81 @@ adds data to a datalist \fBParameters:\fP
 .PP
 \fBReturns:\fP
 .RS 4
-a newly created data_list \fBnode\fP which was inserted in the list 
+a newly created data_list node which was inserted in the list 
 .RE
 .PP
 
 .PP
-Definition at line 137 of file data_list.c.
-.SS "NETSNMP_INLINE void netsnmp_data_list_add_node (\fBnetsnmp_data_list\fP ** head, \fBnetsnmp_data_list\fP * node)"
+Definition at line 141 of file data_list.c.
+.SS "NETSNMP_INLINE void netsnmp_data_list_add_node (\fBnetsnmp_data_list\fP **head, \fBnetsnmp_data_list\fP *node)"
 .PP
 adds data to a datalist \fBParameters:\fP
 .RS 4
-\fIhead\fP a pointer to the head \fBnode\fP of a data_list 
+\fIhead\fP a pointer to the head node of a data_list 
 .br
-\fI\fBnode\fP\fP a \fBnode\fP to stash in the data_list 
+\fInode\fP a node to stash in the data_list 
 .RE
 .PP
 
 .PP
-Definition at line 93 of file data_list.c.
-.SS "NETSNMP_INLINE void netsnmp_free_all_list_data (\fBnetsnmp_data_list\fP * head)"
+Definition at line 97 of file data_list.c.
+.SS "NETSNMP_INLINE void netsnmp_free_all_list_data (\fBnetsnmp_data_list\fP *head)"
 .PP
 frees all data and nodes in a list. \fBParameters:\fP
 .RS 4
-\fIhead\fP the top \fBnode\fP of the list to be freed. 
+\fIhead\fP the top node of the list to be freed. 
 .RE
 .PP
 
 .PP
 Definition at line 42 of file data_list.c.
-.SS "NETSNMP_INLINE void netsnmp_free_list_data (\fBnetsnmp_data_list\fP * node)"
+.SS "NETSNMP_INLINE void netsnmp_free_list_data (\fBnetsnmp_data_list\fP *node)"
 .PP
-frees the data and a name at a given data_list \fBnode\fP. Note that this doesn't free the \fBnode\fP itself. 
+frees the data and a name at a given data_list node. Note that this doesn't free the node itself. 
 .PP
 \fBParameters:\fP
 .RS 4
-\fI\fBnode\fP\fP the \fBnode\fP for which the data should be freed 
+\fInode\fP the node for which the data should be freed 
 .RE
 .PP
 
 .PP
 Definition at line 26 of file data_list.c.
-.SS "NETSNMP_INLINE void* netsnmp_get_list_data (\fBnetsnmp_data_list\fP * head, const char * name)"
+.SS "NETSNMP_INLINE void* netsnmp_get_list_data (\fBnetsnmp_data_list\fP *head, const char *name)"
 .PP
 returns a data_list node's data for a given name within a data_list \fBParameters:\fP
 .RS 4
-\fIhead\fP the head \fBnode\fP of a data_list 
+\fIhead\fP the head node of a data_list 
 .br
 \fIname\fP the name to find 
 .RE
 .PP
 \fBReturns:\fP
 .RS 4
-a pointer to the data cached at that \fBnode\fP 
+a pointer to the data cached at that node 
 .RE
 .PP
 
 .PP
-Definition at line 162 of file data_list.c.
-.SS "NETSNMP_INLINE \fBnetsnmp_data_list\fP* netsnmp_get_list_node (\fBnetsnmp_data_list\fP * head, const char * name)"
+Definition at line 166 of file data_list.c.
+.SS "NETSNMP_INLINE \fBnetsnmp_data_list\fP* netsnmp_get_list_node (\fBnetsnmp_data_list\fP *head, const char *name)"
 .PP
-returns a data_list \fBnode\fP for a given name within a data_list \fBParameters:\fP
+returns a data_list node for a given name within a data_list \fBParameters:\fP
 .RS 4
-\fIhead\fP the head \fBnode\fP of a data_list 
+\fIhead\fP the head node of a data_list 
 .br
 \fIname\fP the name to find 
 .RE
 .PP
 \fBReturns:\fP
 .RS 4
-a pointer to the data_list \fBnode\fP 
+a pointer to the data_list node 
 .RE
 .PP
 
 .PP
-Definition at line 180 of file data_list.c.
-.SS "void netsnmp_read_data_callback (const char * token, char * line)"
+Definition at line 184 of file data_list.c.
+.SS "void netsnmp_read_data_callback (const char *token, char *line)"
 .PP
 intended to be registerd as a .conf parser It should be registered using: register_app_config_handler('token', netsnmp_read_data_callback, XXX)
 .PP
@@ -205,8 +205,8 @@ make netsnmp_read_data_callback deal with a free routine
 .PP
 
 .PP
-Definition at line 333 of file data_list.c.
-.SS "void netsnmp_register_save_list (\fBnetsnmp_data_list\fP ** datalist, const char * type, const char * token, Netsnmp_Save_List_Data * data_list_save_ptr, Netsnmp_Read_List_Data * data_list_read_ptr, Netsnmp_Free_List_Data * data_list_free_ptr)"
+Definition at line 337 of file data_list.c.
+.SS "void netsnmp_register_save_list (\fBnetsnmp_data_list\fP **datalist, const char *type, const char *token, Netsnmp_Save_List_Data *data_list_save_ptr, Netsnmp_Read_List_Data *data_list_read_ptr, Netsnmp_Free_List_Data *data_list_free_ptr)"
 .PP
 registers to store a data_list set of data at persistent storage time \fBParameters:\fP
 .RS 4
@@ -220,7 +220,7 @@ registers to store a data_list set of data at persistent storage time \fBParamet
 .br
 \fIdata_list_read_ptr\fP a function pointer which can read the remainder of a saved line and return the application specific void * pointer. 
 .br
-\fIdata_list_free_ptr\fP a function pointer which will be passed to the data \fBnode\fP for freeing it in the future when/if the list/node is cleaned up or destroyed. 
+\fIdata_list_free_ptr\fP a function pointer which will be passed to the data node for freeing it in the future when/if the list/node is cleaned up or destroyed. 
 .RE
 .PP
 
@@ -232,12 +232,12 @@ netsnmp_register_save_list should handle the same token name being saved from di
 .PP
 
 .PP
-Definition at line 231 of file data_list.c.
-.SS "int netsnmp_remove_list_node (\fBnetsnmp_data_list\fP ** realhead, const char * name)"
+Definition at line 235 of file data_list.c.
+.SS "int netsnmp_remove_list_node (\fBnetsnmp_data_list\fP **realhead, const char *name)"
 .PP
-Removes a named \fBnode\fP from a data_list (and frees it). \fBParameters:\fP
+Removes a named node from a data_list (and frees it) \fBParameters:\fP
 .RS 4
-\fIrealhead\fP a pointer to the head \fBnode\fP of a data_list 
+\fIrealhead\fP a pointer to the head node of a data_list 
 .br
 \fIname\fP the name to find and remove 
 .RE
@@ -249,13 +249,13 @@ Removes a named \fBnode\fP from a data_list (and frees it). \fBParameters:\fP
 .PP
 
 .PP
-Definition at line 198 of file data_list.c.
-.SS "int netsnmp_save_all_data (\fBnetsnmp_data_list\fP * head, const char * type, const char * token, Netsnmp_Save_List_Data * data_list_save_ptr)"
+Definition at line 202 of file data_list.c.
+.SS "int netsnmp_save_all_data (\fBnetsnmp_data_list\fP *head, const char *type, const char *token, Netsnmp_Save_List_Data *data_list_save_ptr)"
 .PP
 intended to be called as a callback during persistent save operations. See the netsnmp_save_all_data_callback for where this is typically used. 
 .PP
-Definition at line 297 of file data_list.c.
-.SS "int netsnmp_save_all_data_callback (int major, int minor, void * serverarg, void * clientarg)"
+Definition at line 301 of file data_list.c.
+.SS "int netsnmp_save_all_data_callback (intmajor, intminor, void *serverarg, void *clientarg)"
 .PP
 intended to be registerd as a callback operation. It should be registered using:
 .PP
@@ -263,7 +263,7 @@ snmp_register_callback(SNMP_CALLBACK_LIBRARY, SNMP_CALLBACK_STORE_DATA, netsnmp_
 .PP
 where INFO_POINTER is a pointer to a netsnmp_data_list_saveinfo object containing apporpriate registration information 
 .PP
-Definition at line 280 of file data_list.c.
+Definition at line 284 of file data_list.c.
 .SH "Author"
 .PP 
 Generated automatically by Doxygen for net-snmp from the source code.
