--- a/net-snmp/man/netsnmp_library.3
+++ b/net-snmp/man/netsnmp_library.3
@@ -1,8 +1,8 @@
-.TH "The Net-SNMP library" 3 "23 May 2010" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
+.TH "The Net-SNMP library" 3 "Fri May 6 2011" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-netsnmp_library \- the Net-SNMP library
+The Net-SNMP library \- 
 .SS "Data Structures"
 
 .in +1c
@@ -33,7 +33,7 @@ netsnmp_library \- the Net-SNMP library
 .br
 .PP
 
-.RI "\fIThe purpose of the default storage is three-fold:. \fP"
+.RI "\fIThe purpose of the default storage is three-fold: \fP"
 .ti -1c
 .RI "\fBmib parsing and datatype manipulation routines.\fP"
 .br
@@ -93,6 +93,21 @@ netsnmp_library \- the Net-SNMP library
 .RI "#define \fBBSD4_2\fP"
 .br
 .ti -1c
+.RI "#define \fBNFDBITS\fP   (sizeof(fd_mask) * NBBY)"
+.br
+.ti -1c
+.RI "#define \fBFD_SET\fP(n, p)   ((p)->fds_bits[(n)/NFDBITS] |= (1 << ((n) % NFDBITS)))"
+.br
+.ti -1c
+.RI "#define \fBFD_CLR\fP(n, p)   ((p)->fds_bits[(n)/NFDBITS] &= ~(1 << ((n) % NFDBITS)))"
+.br
+.ti -1c
+.RI "#define \fBFD_ISSET\fP(n, p)   ((p)->fds_bits[(n)/NFDBITS] & (1 << ((n) % NFDBITS)))"
+.br
+.ti -1c
+.RI "#define \fBFD_ZERO\fP(p)   memset((p), 0, sizeof(*(p)))"
+.br
+.ti -1c
 .RI "#define \fBDEFAULT_COMMUNITY\fP   'public'"
 .br
 .ti -1c
@@ -118,6 +133,13 @@ netsnmp_library \- the Net-SNMP library
 .br
 .ti -1c
 .RI "#define \fBERROR_STAT_LENGTH\fP   11"
+.br
+.in -1c
+.SS "Typedefs"
+
+.in +1c
+.ti -1c
+.RI "typedef long \fBfd_mask\fP"
 .br
 .in -1c
 .SS "Functions"
@@ -193,7 +215,7 @@ netsnmp_library \- the Net-SNMP library
 .ti -1c
 .RI "void \fBinit_snmp\fP (const char *type)"
 .br
-.RI "\fICalls the functions to do config file loading and mib \fBmodule\fP parsing in the correct order. \fP"
+.RI "\fICalls the functions to do config file loading and mib module parsing in the correct order. \fP"
 .ti -1c
 .RI "void \fBsnmp_store\fP (const char *type)"
 .br
@@ -239,22 +261,10 @@ netsnmp_library \- the Net-SNMP library
 .RI "int \fBsnmp_close_sessions\fP (void)"
 .br
 .ti -1c
-.RI "int \fBsnmpv3_header_realloc_rbuild\fP (u_char **pkt, size_t *pkt_len, size_t *offset, \fBnetsnmp_session\fP *session, \fBnetsnmp_pdu\fP *pdu)"
-.br
-.ti -1c
-.RI "int \fBsnmpv3_scopedPDU_header_realloc_rbuild\fP (u_char **pkt, size_t *pkt_len, size_t *offset, \fBnetsnmp_pdu\fP *pdu, size_t body_len)"
-.br
-.ti -1c
-.RI "int \fBsnmpv3_packet_realloc_rbuild\fP (u_char **pkt, size_t *pkt_len, size_t *offset, \fBnetsnmp_session\fP *session, \fBnetsnmp_pdu\fP *pdu, u_char *pdu_data, size_t pdu_data_len)"
-.br
-.ti -1c
 .RI "int \fBsnmpv3_packet_build\fP (\fBnetsnmp_session\fP *session, \fBnetsnmp_pdu\fP *pdu, u_char *packet, size_t *out_length, u_char *pdu_data, size_t pdu_data_len)"
 .br
 .ti -1c
 .RI "u_char * \fBsnmp_pdu_build\fP (\fBnetsnmp_pdu\fP *pdu, u_char *cp, size_t *out_length)"
-.br
-.ti -1c
-.RI "int \fBsnmp_pdu_realloc_rbuild\fP (u_char **pkt, size_t *pkt_len, size_t *offset, \fBnetsnmp_pdu\fP *pdu)"
 .br
 .ti -1c
 .RI "int \fBsnmpv3_parse\fP (\fBnetsnmp_pdu\fP *pdu, u_char *data, size_t *length, u_char **after_header, \fBnetsnmp_session\fP *sess)"
@@ -362,6 +372,10 @@ netsnmp_library \- the Net-SNMP library
 .RI "\fBnetsnmp_session\fP * \fBsnmp_sess_session\fP (void *sessp)"
 .br
 .ti -1c
+.RI "\fBnetsnmp_session\fP * \fBsnmp_sess_session_lookup\fP (void *sessp)"
+.br
+.RI "\fILook up a session that already may have been closed. \fP"
+.ti -1c
 .RI "\fBnetsnmp_transport\fP * \fBsnmp_sess_transport\fP (void *sessp)"
 .br
 .ti -1c
@@ -435,14 +449,14 @@ netsnmp_library \- the Net-SNMP library
 Definition at line 148 of file snmp_api.c.
 .SH "Function Documentation"
 .PP 
-.SS "int _sess_read (void * sessp, fd_set * fdset)"
+.SS "int _sess_read (void *sessp, fd_set *fdset)"
 .PP
 XXX-rks: why no SNMP_FREE(isp->packet); ??
 .PP
 XXX-rks: why no SNMP_FREE(isp->packet); ?? 
 .PP
-Definition at line 5412 of file snmp_api.c.
-.SS "int init_agent (const char * app)"
+Definition at line 5418 of file snmp_api.c.
+.SS "int init_agent (const char *app)"
 .PP
 Initialize the agent. Calls into init_agent_read_config to set tha app's configuration file in the appropriate default storage space, NETSNMP_DS_LIB_APPTYPE. Need to call init_agent before calling init_snmp.
 .PP
@@ -464,9 +478,9 @@ Returns non-zero on failure and zero on success.
 
 .PP
 Definition at line 270 of file snmp_vars.c.
-.SS "void init_snmp (const char * type)"
+.SS "void init_snmp (const char *type)"
 .PP
-Calls the functions to do config file loading and mib \fBmodule\fP parsing in the correct order. \fBParameters:\fP
+Calls the functions to do config file loading and mib module parsing in the correct order. \fBParameters:\fP
 .RS 4
 \fItype\fP label for the config file 'type'
 .RE
@@ -484,7 +498,7 @@ void
 
 .PP
 Definition at line 787 of file snmp_api.c.
-.SS "int netsnmp_oid_compare_ll (const oid * in_name1, size_t len1, const oid * in_name2, size_t len2, size_t * offpt)"
+.SS "int netsnmp_oid_compare_ll (const oid *in_name1, size_tlen1, const oid *in_name2, size_tlen2, size_t *offpt)"
 .PP
 lexicographical compare two object identifiers and return the point where they differ Caution: this method is called often by command responder applications (ie, agent).
 .PP
@@ -495,8 +509,8 @@ lexicographical compare two object identifiers and return the point where they d
 .PP
 
 .PP
-Definition at line 6350 of file snmp_api.c.
-.SS "int netsnmp_oid_equals (const oid * in_name1, size_t len1, const oid * in_name2, size_t len2)"
+Definition at line 6356 of file snmp_api.c.
+.SS "int netsnmp_oid_equals (const oid *in_name1, size_tlen1, const oid *in_name2, size_tlen2)"
 .PP
 Compares 2 OIDs to determine if they are exactly equal. This should be faster than doing a snmp_oid_compare for different length OIDs, since the length is checked first and if != returns immediately. Might be very slighly faster if lengths are ==. 
 .PP
@@ -518,8 +532,8 @@ Compares 2 OIDs to determine if they are exactly equal. This should be faster th
 .PP
 
 .PP
-Definition at line 6431 of file snmp_api.c.
-.SS "int netsnmp_oid_find_prefix (const oid * in_name1, size_t len1, const oid * in_name2, size_t len2)"
+Definition at line 6437 of file snmp_api.c.
+.SS "int netsnmp_oid_find_prefix (const oid *in_name1, size_tlen1, const oid *in_name2, size_tlen2)"
 .PP
 Given two OIDs, determine the common prefix to them both. \fBParameters:\fP
 .RS 4
@@ -534,13 +548,13 @@ Given two OIDs, determine the common prefix to them both. \fBParameters:\fP
 .PP
 \fBReturns:\fP
 .RS 4
-length of largest common index of commonality. 1 = first, 0 if none * or -1 on error. 
+length of common prefix 0 if no common prefix, -1 on error. 
 .RE
 .PP
 
 .PP
-Definition at line 6487 of file snmp_api.c.
-.SS "int netsnmp_oid_is_subtree (const oid * in_name1, size_t len1, const oid * in_name2, size_t len2)"
+Definition at line 6501 of file snmp_api.c.
+.SS "int netsnmp_oid_is_subtree (const oid *in_name1, size_tlen1, const oid *in_name2, size_tlen2)"
 .PP
 Identical to netsnmp_oid_equals, except only the length up to len1 is compared. Functionally, this determines if in_name2 is equal or a subtree of in_name1 
 .PP
@@ -562,8 +576,8 @@ Identical to netsnmp_oid_equals, except only the length up to len1 is compared. 
 .PP
 
 .PP
-Definition at line 6467 of file snmp_api.c.
-.SS "int snmp_oid_compare (const oid * in_name1, size_t len1, const oid * in_name2, size_t len2)"
+Definition at line 6480 of file snmp_api.c.
+.SS "int snmp_oid_compare (const oid *in_name1, size_tlen1, const oid *in_name2, size_tlen2)"
 .PP
 lexicographical compare two object identifiers. Caution: this method is called often by command responder applications (ie, agent).
 .PP
@@ -574,8 +588,8 @@ lexicographical compare two object identifiers. Caution: this method is called o
 .PP
 
 .PP
-Definition at line 6301 of file snmp_api.c.
-.SS "int snmp_oidtree_compare (const oid * in_name1, size_t len1, const oid * in_name2, size_t len2)"
+Definition at line 6307 of file snmp_api.c.
+.SS "int snmp_oidtree_compare (const oid *in_name1, size_tlen1, const oid *in_name2, size_tlen2)"
 .PP
 Compares 2 OIDs to determine if they are equal up until the shortest length. \fBParameters:\fP
 .RS 4
@@ -595,8 +609,28 @@ Compares 2 OIDs to determine if they are equal up until the shortest length. \fB
 .PP
 
 .PP
-Definition at line 6403 of file snmp_api.c.
-.SS "void snmp_shutdown (const char * type)"
+Definition at line 6409 of file snmp_api.c.
+.SS "\fBnetsnmp_session\fP* snmp_sess_session_lookup (void *sessp)"
+.PP
+Look up a session that already may have been closed. \fBParameters:\fP
+.RS 4
+\fIsessp\fP Opaque pointer, returned by snmp_sess_open.
+.RE
+.PP
+\fBReturns:\fP
+.RS 4
+Pointer to session upon success or NULL upon failure.
+.RE
+.PP
+\fBSee also:\fP
+.RS 4
+snmp_sess_session() 
+.RE
+.PP
+
+.PP
+Definition at line 7167 of file snmp_api.c.
+.SS "void snmp_shutdown (const char *type)"
 .PP
 Shuts down the application, saving any needed persistent storage, and appropriate clean up. \fBParameters:\fP
 .RS 4
@@ -611,7 +645,7 @@ void
 
 .PP
 Definition at line 853 of file snmp_api.c.
-.SS "int snmpv3_engineID_probe (struct \fBsession_list\fP * slp, \fBnetsnmp_session\fP * in_session)"
+.SS "int snmpv3_engineID_probe (struct \fBsession_list\fP *slp, \fBnetsnmp_session\fP *in_session)"
 .PP
 probe for peer engineID \fBParameters:\fP
 .RS 4
@@ -640,7 +674,7 @@ the first session in slp should the internal allocated copy of in_session
 .PP
 
 .PP
-Definition at line 1276 of file snmp_api.c.
+Definition at line 1277 of file snmp_api.c.
 .SH "Author"
 .PP 
 Generated automatically by Doxygen for net-snmp from the source code.
