--- a/net-snmp/man/netsnmp_mib_utilities.3
+++ b/net-snmp/man/netsnmp_mib_utilities.3
@@ -1,8 +1,8 @@
-.TH "mib parsing and datatype manipulation routines." 3 "23 May 2010" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
+.TH "mib parsing and datatype manipulation routines." 3 "Fri May 6 2011" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
-netsnmp_mib_utilities \- the Net-SNMP mib parsing and datatype manipulation routines.
+mib parsing and datatype manipulation routines. \- 
 .SS "Data Structures"
 
 .in +1c
@@ -63,7 +63,7 @@ netsnmp_mib_utilities \- the Net-SNMP mib parsing and datatype manipulation rout
 .ti -1c
 .RI "int \fBsprint_realloc_timeticks\fP (u_char **buf, size_t *buf_len, size_t *out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .br
-.RI "\fIPrints a timetick \fBvariable\fP into a buffer. \fP"
+.RI "\fIPrints a timetick variable into a buffer. \fP"
 .ti -1c
 .RI "int \fBsprint_realloc_hinted_integer\fP (u_char **buf, size_t *buf_len, size_t *out_len, int allow_realloc, long val, const char decimaltype, const char *hint, const char *units)"
 .br
@@ -110,11 +110,11 @@ netsnmp_mib_utilities \- the Net-SNMP mib parsing and datatype manipulation rout
 .ti -1c
 .RI "int \fBsprint_realloc_by_type\fP (u_char **buf, size_t *buf_len, size_t *out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .br
-.RI "\fIUniversal print routine, prints a \fBvariable\fP into a buffer according to the \fBvariable\fP type. \fP"
+.RI "\fIUniversal print routine, prints a variable into a buffer according to the variable type. \fP"
 .ti -1c
 .RI "struct \fBtree\fP * \fBget_tree_head\fP (void)"
 .br
-.RI "\fIRetrieves the \fBtree\fP head. \fP"
+.RI "\fIRetrieves the tree head. \fP"
 .ti -1c
 .RI "char * \fBsnmp_out_toggle_options\fP (char *options)"
 .br
@@ -198,11 +198,11 @@ netsnmp_mib_utilities \- the Net-SNMP mib parsing and datatype manipulation rout
 .ti -1c
 .RI "void \fBprint_variable\fP (const oid *objid, size_t objidlen, const \fBnetsnmp_variable_list\fP *\fBvariable\fP)"
 .br
-.RI "\fIPrints a \fBvariable\fP to stdout. \fP"
+.RI "\fIPrints a variable to stdout. \fP"
 .ti -1c
 .RI "void \fBfprint_variable\fP (FILE *f, const oid *objid, size_t objidlen, const \fBnetsnmp_variable_list\fP *\fBvariable\fP)"
 .br
-.RI "\fIPrints a \fBvariable\fP to a file descriptor. \fP"
+.RI "\fIPrints a variable to a file descriptor. \fP"
 .ti -1c
 .RI "int \fBsprint_realloc_value\fP (u_char **buf, size_t *buf_len, size_t *out_len, int allow_realloc, const oid *objid, size_t objidlen, const \fBnetsnmp_variable_list\fP *\fBvariable\fP)"
 .br
@@ -389,7 +389,7 @@ netsnmp_mib_utilities \- the Net-SNMP mib parsing and datatype manipulation rout
 .in -1c
 .SH "Function Documentation"
 .PP 
-.SS "int _sprint_hexstring_line (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const u_char * cp, size_t line_len)"
+.SS "int _sprint_hexstring_line (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const u_char *cp, size_tline_len)"
 .PP
 Prints a hexadecimal string into a buffer. The characters pointed by *cp are encoded as hexadecimal string.
 .PP
@@ -417,17 +417,17 @@ If allow_realloc is true the buffer will be (re)allocated to fit in the needed s
 .PP
 
 .PP
-Definition at line 271 of file mib.c.
-.SS "int build_oid (oid ** out, size_t * out_len, oid * prefix, size_t prefix_len, \fBnetsnmp_variable_list\fP * indexes)"
+Definition at line 274 of file mib.c.
+.SS "int build_oid (oid **out, size_t *out_len, oid *prefix, size_tprefix_len, \fBnetsnmp_variable_list\fP *indexes)"
 .PP
 xxx-rks: should free previous value? 
 .PP
-Definition at line 3581 of file mib.c.
-.SS "int build_oid_segment (\fBnetsnmp_variable_list\fP * var)"
+Definition at line 3582 of file mib.c.
+.SS "int build_oid_segment (\fBnetsnmp_variable_list\fP *var)"
 .PP
 Takes the value in VAR and turns it into an OID segment in var->name. \fBParameters:\fP
 .RS 4
-\fIvar\fP The \fBvariable\fP.
+\fIvar\fP The variable.
 .RE
 .PP
 \fBReturns:\fP
@@ -437,8 +437,8 @@ SNMPERR_SUCCESS or SNMPERR_GENERR
 .PP
 
 .PP
-Definition at line 3445 of file mib.c.
-.SS "void fprint_description (FILE * f, oid * objid, size_t objidlen, int width)"
+Definition at line 3448 of file mib.c.
+.SS "void fprint_description (FILE *f, oid *objid, size_tobjidlen, intwidth)"
 .PP
 Prints on oid description into a file descriptor. \fBParameters:\fP
 .RS 4
@@ -453,8 +453,8 @@ Prints on oid description into a file descriptor. \fBParameters:\fP
 .PP
 
 .PP
-Definition at line 4451 of file mib.c.
-.SS "void fprint_objid (FILE * f, const oid * objid, size_t objidlen)"
+Definition at line 4452 of file mib.c.
+.SS "void fprint_objid (FILE *f, const oid *objid, size_tobjidlen)"
 .PP
 Prints an oid to a file descriptor. \fBParameters:\fP
 .RS 4
@@ -467,10 +467,10 @@ Prints an oid to a file descriptor. \fBParameters:\fP
 .PP
 
 .PP
-Definition at line 3164 of file mib.c.
-.SS "void fprint_variable (FILE * f, const oid * objid, size_t objidlen, const \fBnetsnmp_variable_list\fP * variable)"
+Definition at line 3167 of file mib.c.
+.SS "void fprint_variable (FILE *f, const oid *objid, size_tobjidlen, const \fBnetsnmp_variable_list\fP *variable)"
 .PP
-Prints a \fBvariable\fP to a file descriptor. \fBParameters:\fP
+Prints a variable to a file descriptor. \fBParameters:\fP
 .RS 4
 \fIf\fP The file descriptor to print to. 
 .br
@@ -478,48 +478,48 @@ Prints a \fBvariable\fP to a file descriptor. \fBParameters:\fP
 .br
 \fIobjidlen\fP The length of teh object id. 
 .br
-\fI\fBvariable\fP\fP The \fBvariable\fP to print. 
+\fIvariable\fP The variable to print. 
 .RE
 .PP
 
 .PP
-Definition at line 3318 of file mib.c.
+Definition at line 3321 of file mib.c.
 .SS "struct \fBtree\fP* get_tree_head (void)\fC [read]\fP"
 .PP
-Retrieves the \fBtree\fP head. \fBReturns:\fP
+Retrieves the tree head. \fBReturns:\fP
 .RS 4
-the \fBtree\fP head. 
+the tree head. 
 .RE
 .PP
 
 .PP
-Definition at line 2017 of file mib.c.
-.SS "int get_wild_node (const char * name, oid * objid, size_t * objidlen)"\fBSee also:\fP
+Definition at line 2020 of file mib.c.
+.SS "int get_wild_node (const char *name, oid *objid, size_t *objidlen)"\fBSee also:\fP
 .RS 4
 comments on find_best_tree_node for usage after first time. 
 .RE
 .PP
 
 .PP
-Definition at line 5490 of file mib.c.
+Definition at line 5491 of file mib.c.
 .SS "void netsnmp_fixup_mib_directory (void)"
 .PP
 swap in the new value and repeat 
 .PP
-Definition at line 2480 of file mib.c.
+Definition at line 2483 of file mib.c.
 .SS "char* netsnmp_get_mib_directory (void)"
 .PP
-Check if the environment \fBvariable\fP is set
+Check if the environment variable is set
 .PP
 Not set use hard coded path 
 .PP
-Definition at line 2433 of file mib.c.
+Definition at line 2436 of file mib.c.
 .SS "void netsnmp_init_mib (void)"
 .PP
 Initialises the mib reader. Reads in all settings from the environment. 
 .PP
-Definition at line 2527 of file mib.c.
-.SS "int netsnmp_oid2chars (char * C, int L, const oid * O)"
+Definition at line 2530 of file mib.c.
+.SS "int netsnmp_oid2chars (char *C, intL, const oid *O)"
 .PP
 Converts an OID to its character form. in example 5 . 1 . 2 . 3 . 4 . 5 = 12345
 .PP
@@ -541,8 +541,8 @@ Converts an OID to its character form. in example 5 . 1 . 2 . 3 . 4 . 5 = 12345
 .PP
 length 
 .PP
-Definition at line 6277 of file mib.c.
-.SS "int netsnmp_oid2str (char * S, int L, oid * O)"
+Definition at line 6278 of file mib.c.
+.SS "int netsnmp_oid2str (char *S, intL, oid *O)"
 .PP
 Converts an OID to its string form. in example 5 . 'h' . 'e' . 'l' . 'l' . 'o' = 'hello\\0' (null terminated)
 .PP
@@ -562,8 +562,8 @@ Converts an OID to its string form. in example 5 . 'h' . 'e' . 'l' . 'l' . 'o' =
 .PP
 
 .PP
-Definition at line 6305 of file mib.c.
-.SS "void netsnmp_set_mib_directory (const char * dir)"
+Definition at line 6306 of file mib.c.
+.SS "void netsnmp_set_mib_directory (const char *dir)"
 .PP
 New dir starts with '+', thus we add it.
 .PP
@@ -571,8 +571,8 @@ If dir starts with '+' skip '+' it.
 .PP
 set_string calls strdup, so if we allocated memory, free it 
 .PP
-Definition at line 2378 of file mib.c.
-.SS "int netsnmp_str2oid (const char * S, oid * O, int L)"
+Definition at line 2381 of file mib.c.
+.SS "int netsnmp_str2oid (const char *S, oid *O, intL)"
 .PP
 Converts a string to its OID form. in example 'hello' = 5 . 'h' . 'e' . 'l' . 'l' . 'o'
 .PP
@@ -592,8 +592,8 @@ Converts a string to its OID form. in example 'hello' = 5 . 'h' . 'e' . 'l' . 'l
 .PP
 
 .PP
-Definition at line 6242 of file mib.c.
-.SS "void print_description (oid * objid, size_t objidlen, int width)"
+Definition at line 6243 of file mib.c.
+.SS "void print_description (oid *objid, size_tobjidlen, intwidth)"
 .PP
 Prints on oid description on stdout. \fBSee also:\fP
 .RS 4
@@ -602,8 +602,8 @@ Prints on oid description on stdout. \fBSee also:\fP
 .PP
 
 .PP
-Definition at line 4435 of file mib.c.
-.SS "void print_mib (FILE * fp)"
+Definition at line 4436 of file mib.c.
+.SS "void print_mib (FILE *fp)"
 .PP
 Prints the MIBs to the file fp. \fBParameters:\fP
 .RS 4
@@ -612,8 +612,8 @@ Prints the MIBs to the file fp. \fBParameters:\fP
 .PP
 
 .PP
-Definition at line 2742 of file mib.c.
-.SS "void print_objid (const oid * objid, size_t objidlen)"
+Definition at line 2745 of file mib.c.
+.SS "void print_objid (const oid *objid, size_tobjidlen)"
 .PP
 Prints an oid to stdout. \fBParameters:\fP
 .RS 4
@@ -624,22 +624,22 @@ Prints an oid to stdout. \fBParameters:\fP
 .PP
 
 .PP
-Definition at line 3150 of file mib.c.
-.SS "void print_variable (const oid * objid, size_t objidlen, const \fBnetsnmp_variable_list\fP * variable)"
+Definition at line 3153 of file mib.c.
+.SS "void print_variable (const oid *objid, size_tobjidlen, const \fBnetsnmp_variable_list\fP *variable)"
 .PP
-Prints a \fBvariable\fP to stdout. \fBParameters:\fP
+Prints a variable to stdout. \fBParameters:\fP
 .RS 4
 \fIobjid\fP The object id. 
 .br
 \fIobjidlen\fP The length of teh object id. 
 .br
-\fI\fBvariable\fP\fP The \fBvariable\fP to print. 
+\fIvariable\fP The variable to print. 
 .RE
 .PP
 
 .PP
-Definition at line 3302 of file mib.c.
-.SS "int read_objid (const char * input, oid * output, size_t * out_len)"
+Definition at line 3305 of file mib.c.
+.SS "int read_objid (const char *input, oid *output, size_t *out_len)"
 .PP
 Reads an object identifier from an input string into internal OID form. When called, out_len must hold the maximum length of the output array.
 .PP
@@ -659,8 +659,8 @@ Reads an object identifier from an input string into internal OID form. When cal
 .PP
 If an error occurs, this function returns 0 and MAY set snmp_errno. snmp_errno is NOT set if SET_SNMP_ERROR evaluates to nothing. This can make multi-threaded use a tiny bit more robust. 
 .PP
-Definition at line 2840 of file mib.c.
-.SS "void set_function (struct \fBtree\fP * subtree)"
+Definition at line 2843 of file mib.c.
+.SS "void set_function (struct \fBtree\fP *subtree)"
 .PP
 Set's the printing function printomat in a subtree according it's type. \fBParameters:\fP
 .RS 4
@@ -669,13 +669,13 @@ Set's the printing function printomat in a subtree according it's type. \fBParam
 .PP
 
 .PP
-Definition at line 2763 of file mib.c.
+Definition at line 2766 of file mib.c.
 .SS "void shutdown_mib (void)"
 .PP
 Unloads all mibs. 
 .PP
-Definition at line 2717 of file mib.c.
-.SS "void snmp_in_toggle_options_usage (const char * lead, FILE * outf)"
+Definition at line 2720 of file mib.c.
+.SS "void snmp_in_toggle_options_usage (const char *lead, FILE *outf)"
 .PP
 Prints out a help usage for the in* toggle options. \fBParameters:\fP
 .RS 4
@@ -686,8 +686,8 @@ Prints out a help usage for the in* toggle options. \fBParameters:\fP
 .PP
 
 .PP
-Definition at line 2290 of file mib.c.
-.SS "oid* snmp_parse_oid (const char * argv, oid * root, size_t * rootlen)"
+Definition at line 2293 of file mib.c.
+.SS "oid* snmp_parse_oid (const char *argv, oid *root, size_t *rootlen)"
 .PP
 Given a string, parses an oid out of it (if possible). It will try to parse it based on predetermined configuration if present or by every method possible otherwise. If a suffix has been registered using NETSNMP_DS_LIB_OIDSUFFIX, it will be appended to the input string before processing.
 .PP
@@ -707,8 +707,8 @@ The root oid pointer if successful, or NULL otherwise.
 .PP
 
 .PP
-Definition at line 5848 of file mib.c.
-.SS "int sprint_realloc_asciistring (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const u_char * cp, size_t len)"
+Definition at line 5849 of file mib.c.
+.SS "int sprint_realloc_asciistring (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const u_char *cp, size_tlen)"
 .PP
 Prints an ascii string into a buffer. The characters pointed by *cp are encoded as an ascii string.
 .PP
@@ -736,8 +736,8 @@ If allow_realloc is true the buffer will be (re)allocated to fit in the needed s
 .PP
 
 .PP
-Definition at line 367 of file mib.c.
-.SS "int sprint_realloc_badtype (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
+Definition at line 370 of file mib.c.
+.SS "int sprint_realloc_badtype (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Fallback routine for a bad type, prints 'Variable has bad type' into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -751,9 +751,9 @@ Fallback routine for a bad type, prints 'Variable has bad type' into a buffer. I
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The \fBvariable\fP to encode. 
+\fIvar\fP The variable to encode. 
 .br
-\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -767,8 +767,8 @@ Fallback routine for a bad type, prints 'Variable has bad type' into a buffer. I
 .PP
 
 .PP
-Definition at line 1902 of file mib.c.
-.SS "int sprint_realloc_bitstring (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
+Definition at line 1905 of file mib.c.
+.SS "int sprint_realloc_bitstring (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints a bit string into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -782,9 +782,9 @@ Prints a bit string into a buffer. If allow_realloc is true the buffer will be (
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The \fBvariable\fP to encode. 
+\fIvar\fP The variable to encode. 
 .br
-\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -798,10 +798,10 @@ Prints a bit string into a buffer. If allow_realloc is true the buffer will be (
 .PP
 
 .PP
-Definition at line 1763 of file mib.c.
-.SS "int sprint_realloc_by_type (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
+Definition at line 1766 of file mib.c.
+.SS "int sprint_realloc_by_type (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
-Universal print routine, prints a \fBvariable\fP into a buffer according to the \fBvariable\fP type. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
+Universal print routine, prints a variable into a buffer according to the variable type. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
 \fBParameters:\fP
 .RS 4
@@ -813,9 +813,9 @@ Universal print routine, prints a \fBvariable\fP into a buffer according to the 
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The \fBvariable\fP to encode. 
+\fIvar\fP The variable to encode. 
 .br
-\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -829,8 +829,8 @@ Universal print routine, prints a \fBvariable\fP into a buffer according to the 
 .PP
 
 .PP
-Definition at line 1937 of file mib.c.
-.SS "int sprint_realloc_counter (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
+Definition at line 1940 of file mib.c.
+.SS "int sprint_realloc_counter (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints a counter value into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -844,9 +844,9 @@ Prints a counter value into a buffer. If allow_realloc is true the buffer will b
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The \fBvariable\fP to encode. 
+\fIvar\fP The variable to encode. 
 .br
-\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -860,10 +860,10 @@ Prints a counter value into a buffer. If allow_realloc is true the buffer will b
 .PP
 
 .PP
-Definition at line 1530 of file mib.c.
-.SS "int sprint_realloc_counter64 (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
+Definition at line 1533 of file mib.c.
+.SS "int sprint_realloc_counter64 (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
-Prints a counter into a buffer. The \fBvariable\fP var is encoded as a counter value.
+Prints a counter into a buffer. The variable var is encoded as a counter value.
 .PP
 If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -877,9 +877,9 @@ If allow_realloc is true the buffer will be (re)allocated to fit in the needed s
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The \fBvariable\fP to encode. 
+\fIvar\fP The variable to encode. 
 .br
-\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -893,8 +893,8 @@ If allow_realloc is true the buffer will be (re)allocated to fit in the needed s
 .PP
 
 .PP
-Definition at line 846 of file mib.c.
-.SS "int sprint_realloc_gauge (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
+Definition at line 849 of file mib.c.
+.SS "int sprint_realloc_gauge (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints a gauge value into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -908,9 +908,9 @@ Prints a gauge value into a buffer. If allow_realloc is true the buffer will be 
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The \fBvariable\fP to encode. 
+\fIvar\fP The variable to encode. 
 .br
-\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -924,8 +924,8 @@ Prints a gauge value into a buffer. If allow_realloc is true the buffer will be 
 .PP
 
 .PP
-Definition at line 1457 of file mib.c.
-.SS "int sprint_realloc_hinted_integer (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, long val, const char decimaltype, const char * hint, const char * units)"
+Definition at line 1460 of file mib.c.
+.SS "int sprint_realloc_hinted_integer (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, longval, const chardecimaltype, const char *hint, const char *units)"
 .PP
 Prints an integer according to the hint into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -939,9 +939,9 @@ Prints an integer according to the hint into a buffer. If allow_realloc is true 
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIval\fP The \fBvariable\fP to encode. 
+\fIval\fP The variable to encode. 
 .br
-\fIdecimaltype\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
+\fIdecimaltype\fP The enumeration ff this variable is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may _NOT_ be NULL. 
 .br
@@ -955,8 +955,8 @@ Prints an integer according to the hint into a buffer. If allow_realloc is true 
 .PP
 
 .PP
-Definition at line 1183 of file mib.c.
-.SS "int sprint_realloc_integer (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
+Definition at line 1186 of file mib.c.
+.SS "int sprint_realloc_integer (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints an integer into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -970,9 +970,9 @@ Prints an integer into a buffer. If allow_realloc is true the buffer will be (re
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The \fBvariable\fP to encode. 
+\fIvar\fP The variable to encode. 
 .br
-\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -986,8 +986,8 @@ Prints an integer into a buffer. If allow_realloc is true the buffer will be (re
 .PP
 
 .PP
-Definition at line 1257 of file mib.c.
-.SS "int sprint_realloc_ipaddress (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
+Definition at line 1260 of file mib.c.
+.SS "int sprint_realloc_ipaddress (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints an ip-address into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -1001,9 +1001,9 @@ Prints an ip-address into a buffer. If allow_realloc is true the buffer will be 
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The \fBvariable\fP to encode. 
+\fIvar\fP The variable to encode. 
 .br
-\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -1017,8 +1017,8 @@ Prints an ip-address into a buffer. If allow_realloc is true the buffer will be 
 .PP
 
 .PP
-Definition at line 1659 of file mib.c.
-.SS "int sprint_realloc_networkaddress (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
+Definition at line 1662 of file mib.c.
+.SS "int sprint_realloc_networkaddress (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints a network address into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -1032,9 +1032,9 @@ Prints a network address into a buffer. If allow_realloc is true the buffer will
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The \fBvariable\fP to encode. 
+\fIvar\fP The variable to encode. 
 .br
-\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -1048,8 +1048,8 @@ Prints a network address into a buffer. If allow_realloc is true the buffer will
 .PP
 
 .PP
-Definition at line 1593 of file mib.c.
-.SS "int sprint_realloc_null (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
+Definition at line 1596 of file mib.c.
+.SS "int sprint_realloc_null (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints a null value into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -1063,9 +1063,9 @@ Prints a null value into a buffer. If allow_realloc is true the buffer will be (
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The \fBvariable\fP to encode. 
+\fIvar\fP The variable to encode. 
 .br
-\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -1079,8 +1079,8 @@ Prints a null value into a buffer. If allow_realloc is true the buffer will be (
 .PP
 
 .PP
-Definition at line 1719 of file mib.c.
-.SS "int sprint_realloc_object_identifier (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
+Definition at line 1722 of file mib.c.
+.SS "int sprint_realloc_object_identifier (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints an object identifier into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -1094,9 +1094,9 @@ Prints an object identifier into a buffer. If allow_realloc is true the buffer w
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The \fBvariable\fP to encode. 
+\fIvar\fP The variable to encode. 
 .br
-\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -1110,10 +1110,10 @@ Prints an object identifier into a buffer. If allow_realloc is true the buffer w
 .PP
 
 .PP
-Definition at line 1039 of file mib.c.
-.SS "int sprint_realloc_octet_string (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
+Definition at line 1042 of file mib.c.
+.SS "int sprint_realloc_octet_string (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
-Prints an octet string into a buffer. The \fBvariable\fP var is encoded as octet string.
+Prints an octet string into a buffer. The variable var is encoded as octet string.
 .PP
 If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -1127,9 +1127,9 @@ If allow_realloc is true the buffer will be (re)allocated to fit in the needed s
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The \fBvariable\fP to encode. 
+\fIvar\fP The variable to encode. 
 .br
-\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -1143,8 +1143,8 @@ If allow_realloc is true the buffer will be (re)allocated to fit in the needed s
 .PP
 
 .PP
-Definition at line 427 of file mib.c.
-.SS "int sprint_realloc_opaque (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
+Definition at line 430 of file mib.c.
+.SS "int sprint_realloc_opaque (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints an object identifier into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -1158,9 +1158,9 @@ Prints an object identifier into a buffer. If allow_realloc is true the buffer w
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The \fBvariable\fP to encode. 
+\fIvar\fP The variable to encode. 
 .br
-\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -1174,10 +1174,10 @@ Prints an object identifier into a buffer. If allow_realloc is true the buffer w
 .PP
 
 .PP
-Definition at line 949 of file mib.c.
-.SS "int sprint_realloc_timeticks (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
+Definition at line 952 of file mib.c.
+.SS "int sprint_realloc_timeticks (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
-Prints a timetick \fBvariable\fP into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
+Prints a timetick variable into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
 \fBParameters:\fP
 .RS 4
@@ -1189,9 +1189,9 @@ Prints a timetick \fBvariable\fP into a buffer. If allow_realloc is true the buf
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The \fBvariable\fP to encode. 
+\fIvar\fP The variable to encode. 
 .br
-\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -1205,8 +1205,8 @@ Prints a timetick \fBvariable\fP into a buffer. If allow_realloc is true the buf
 .PP
 
 .PP
-Definition at line 1109 of file mib.c.
-.SS "int sprint_realloc_uinteger (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
+Definition at line 1112 of file mib.c.
+.SS "int sprint_realloc_uinteger (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .PP
 Prints an unsigned integer into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -1220,9 +1220,9 @@ Prints an unsigned integer into a buffer. If allow_realloc is true the buffer wi
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The \fBvariable\fP to encode. 
+\fIvar\fP The variable to encode. 
 .br
-\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -1236,8 +1236,8 @@ Prints an unsigned integer into a buffer. If allow_realloc is true the buffer wi
 .PP
 
 .PP
-Definition at line 1360 of file mib.c.
-.SS "char* uptime_string (u_long timeticks, char * buf)"
+Definition at line 1363 of file mib.c.
+.SS "char* uptime_string (u_longtimeticks, char *buf)"
 .PP
 Converts timeticks to hours, minutes, seconds string. CMU compatible does not show centiseconds.
 .PP
@@ -1260,7 +1260,7 @@ uptimeString
 .PP
 
 .PP
-Definition at line 5813 of file mib.c.
+Definition at line 5814 of file mib.c.
 .SH "Variable Documentation"
 .PP 
 .SS "\fBPrefixList\fP mib_prefixes[]"\fBInitial value:\fP
@@ -1277,7 +1277,7 @@ Definition at line 5813 of file mib.c.
 }
 .fi
 .PP
-Definition at line 160 of file mib.c.
+Definition at line 163 of file mib.c.
 .SH "Author"
 .PP 
 Generated automatically by Doxygen for net-snmp from the source code.
