--- a/net-snmp/man/netsnmp_netsnmp_mib_handler_methods.3
+++ b/net-snmp/man/netsnmp_netsnmp_mib_handler_methods.3
@@ -1,4 +1,4 @@
-.TH "netsnmp_mib_handler_methods" 3 "23 May 2010" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
+.TH "netsnmp_mib_handler_methods" 3 "Fri May 6 2011" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
