--- a/net-snmp/man/netsnmp_netsnmp_request_info_s.3
+++ b/net-snmp/man/netsnmp_netsnmp_request_info_s.3
@@ -1,4 +1,4 @@
-.TH "netsnmp_request_info_s" 3 "23 May 2010" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
+.TH "netsnmp_request_info_s" 3 "Fri May 6 2011" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -17,7 +17,7 @@ The netsnmp request info structure.
 .ti -1c
 .RI "\fBnetsnmp_variable_list\fP * \fBrequestvb\fP"
 .br
-.RI "\fI\fBvariable\fP bindings \fP"
+.RI "\fIvariable bindings \fP"
 .ti -1c
 .RI "\fBnetsnmp_data_list\fP * \fBparent_data\fP"
 .br
@@ -28,7 +28,7 @@ The netsnmp request info structure.
 .ti -1c
 .RI "oid * \fBrange_end\fP"
 .br
-.RI "\fIdon't free, reference to (struct \fBtree\fP)->end \fP"
+.RI "\fIdon't free, reference to (struct tree)->end \fP"
 .ti -1c
 .RI "size_t \fBrange_end_len\fP"
 .br
@@ -92,7 +92,7 @@ can be used to pass information on a per-request basis from a helper to the late
 Definition at line 64 of file snmp_agent.h.
 .SS "oid* \fBnetsnmp_request_info_s::range_end\fP"
 .PP
-don't free, reference to (struct \fBtree\fP)->end 
+don't free, reference to (struct tree)->end 
 .PP
 Definition at line 72 of file snmp_agent.h.
 .SS "int \fBnetsnmp_request_info_s::repeat\fP"
@@ -102,7 +102,7 @@ get-bulk
 Definition at line 87 of file snmp_agent.h.
 .SS "\fBnetsnmp_variable_list\fP* \fBnetsnmp_request_info_s::requestvb\fP"
 .PP
-\fBvariable\fP bindings 
+variable bindings 
 .PP
 \fBExamples: \fP
 .in +1c
