--- a/net-snmp/man/netsnmp_snmp_logging.3
+++ b/net-snmp/man/netsnmp_snmp_logging.3
@@ -1,4 +1,4 @@
-.TH "generic logging for net-snmp" 3 "23 May 2010" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
+.TH "generic logging for net-snmp" 3 "Fri May 6 2011" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -11,6 +11,39 @@ generic logging for net-snmp \-
 .br
 .ti -1c
 .RI "#define \fBva_copy\fP(dest, src)   memcpy (&dest, &src, sizeof (va_list))"
+.br
+.ti -1c
+.RI "#define \fBLOG_CONS\fP   0"
+.br
+.ti -1c
+.RI "#define \fBLOG_PID\fP   0"
+.br
+.ti -1c
+.RI "#define \fBLOG_LOCAL0\fP   0"
+.br
+.ti -1c
+.RI "#define \fBLOG_LOCAL1\fP   0"
+.br
+.ti -1c
+.RI "#define \fBLOG_LOCAL2\fP   0"
+.br
+.ti -1c
+.RI "#define \fBLOG_LOCAL3\fP   0"
+.br
+.ti -1c
+.RI "#define \fBLOG_LOCAL4\fP   0"
+.br
+.ti -1c
+.RI "#define \fBLOG_LOCAL5\fP   0"
+.br
+.ti -1c
+.RI "#define \fBLOG_LOCAL6\fP   0"
+.br
+.ti -1c
+.RI "#define \fBLOG_LOCAL7\fP   0"
+.br
+.ti -1c
+.RI "#define \fBLOG_DAEMON\fP   0"
 .br
 .ti -1c
 .RI "#define \fBLOG_USER\fP   0"
@@ -131,11 +164,11 @@ generic logging for net-snmp \-
 .ti -1c
 .RI "int \fBsnmp_vlog\fP (int priority, const char *format, va_list ap)"
 .br
-.RI "\fIThis snmp logging function allows \fBvariable\fP argument list given the specified priority, format and a populated va_list structure. \fP"
+.RI "\fIThis snmp logging function allows variable argument list given the specified priority, format and a populated va_list structure. \fP"
 .ti -1c
 .RI "int \fBsnmp_log\fP (int priority, const char *format,...)"
 .br
-.RI "\fIThis snmp logging function allows \fBvariable\fP argument list given the specified format and priority. \fP"
+.RI "\fIThis snmp logging function allows variable argument list given the specified format and priority. \fP"
 .ti -1c
 .RI "void \fBsnmp_log_perror\fP (const char *s)"
 .br
@@ -159,7 +192,7 @@ generic logging for net-snmp \-
 .PP
 hmm, don't zero status isn't saved.. i think it's safer not to overwrite, in case a hup is just to re-read config files...
 .PP
-Definition at line 636 of file snmp_logging.c.
+Definition at line 639 of file snmp_logging.c.
 .SS "int snmp_get_do_logging (void)"
 .PP
 Is logging done? \fBReturns:\fP
@@ -169,10 +202,10 @@ Returns 0 if logging is off, 1 when it is done.
 .PP
 
 .PP
-Definition at line 493 of file snmp_logging.c.
-.SS "int snmp_log (int priority, const char * format,  ...)"
+Definition at line 496 of file snmp_logging.c.
+.SS "int snmp_log (intpriority, const char *format, ...)"
 .PP
-This snmp logging function allows \fBvariable\fP argument list given the specified format and priority. Calls the snmp_vlog function. The default logfile this function writes to is /var/log/snmpd.log.
+This snmp logging function allows variable argument list given the specified format and priority. Calls the snmp_vlog function. The default logfile this function writes to is /var/log/snmpd.log.
 .PP
 \fBSee also:\fP
 .RS 4
@@ -185,10 +218,10 @@ This snmp logging function allows \fBvariable\fP argument list given the specifi
 .in +1c
 \fBdelayed_instance.c\fP.
 .PP
-Definition at line 1275 of file snmp_logging.c.
-.SS "int snmp_vlog (int priority, const char * format, va_list ap)"
+Definition at line 1278 of file snmp_logging.c.
+.SS "int snmp_vlog (intpriority, const char *format, va_listap)"
 .PP
-This snmp logging function allows \fBvariable\fP argument list given the specified priority, format and a populated va_list structure. The default logfile this function writes to is /var/log/snmpd.log.
+This snmp logging function allows variable argument list given the specified priority, format and a populated va_list structure. The default logfile this function writes to is /var/log/snmpd.log.
 .PP
 \fBParameters:\fP
 .RS 4
@@ -223,7 +256,7 @@ LOG_DEBUG debug-level messages
 
 .PP
 .br
-\fIformat\fP is a pointer to a char representing the \fBvariable\fP argument list format used.
+\fIformat\fP is a pointer to a char representing the variable argument list format used.
 .br
 \fIap\fP is a va_list type used to traverse the list of arguments.
 .RE
@@ -240,7 +273,7 @@ Returns 0 on success, -1 when the code could not format the log- string, -2 when
 .PP
 
 .PP
-Definition at line 1214 of file snmp_logging.c.
+Definition at line 1217 of file snmp_logging.c.
 .SH "Author"
 .PP 
 Generated automatically by Doxygen for net-snmp from the source code.
