--- a/net-snmp/man/netsnmp_snmp_pdu.3
+++ b/net-snmp/man/netsnmp_snmp_pdu.3
@@ -1,4 +1,4 @@
-.TH "snmp_pdu" 3 "23 May 2010" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
+.TH "snmp_pdu" 3 "Fri May 6 2011" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -41,11 +41,11 @@ The snmp protocol data unit.
 .ti -1c
 .RI "long \fBerrstat\fP"
 .br
-.RI "\fIError status (non_repeaters in GetBulk). \fP"
+.RI "\fIError status (non_repeaters in GetBulk) \fP"
 .ti -1c
 .RI "long \fBerrindex\fP"
 .br
-.RI "\fIError index (max_repetitions in GetBulk). \fP"
+.RI "\fIError index (max_repetitions in GetBulk) \fP"
 .ti -1c
 .RI "u_long \fBtime\fP"
 .br
@@ -203,12 +203,12 @@ System OID.
 Definition at line 135 of file snmp_api.h.
 .SS "long \fBsnmp_pdu::errindex\fP"
 .PP
-Error index (max_repetitions in GetBulk). 
+Error index (max_repetitions in GetBulk) 
 .PP
 Definition at line 95 of file snmp_api.h.
 .SS "long \fBsnmp_pdu::errstat\fP"
 .PP
-Error status (non_repeaters in GetBulk). 
+Error status (non_repeaters in GetBulk) 
 .PP
 Definition at line 93 of file snmp_api.h.
 .SS "long \fBsnmp_pdu::msgid\fP"
