--- a/net-snmp/man/netsnmp_snmp_session.3
+++ b/net-snmp/man/netsnmp_snmp_session.3
@@ -1,4 +1,4 @@
-.TH "snmp_session" 3 "23 May 2010" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
+.TH "snmp_session" 3 "Fri May 6 2011" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -198,7 +198,7 @@ The snmp session structure.
 .ti -1c
 .RI "void * \fBsecurityInfo\fP"
 .br
-.RI "\fIsecurity \fBmodule\fP specific \fP"
+.RI "\fIsecurity module specific \fP"
 .ti -1c
 .RI "void * \fBmyvoid\fP"
 .br
@@ -214,6 +214,8 @@ Definition at line 187 of file snmp_api.h.
 .SS "u_char*(* \fBsnmp_session::authenticator\fP)(u_char *, size_t *, u_char *, size_t)"
 .PP
 Authentication function or NULL if null authentication is used. 
+.PP
+Definition at line 212 of file snmp_api.h.
 .SS "netsnmp_callback \fBsnmp_session::callback\fP"
 .PP
 Function to interpret incoming data. 
@@ -361,7 +363,7 @@ Length of contextEngineID.
 Definition at line 258 of file snmp_api.h.
 .SS "void* \fBsnmp_session::securityInfo\fP"
 .PP
-security \fBmodule\fP specific 
+security module specific 
 .PP
 Definition at line 300 of file snmp_api.h.
 .SS "int \fBsnmp_session::securityLevel\fP"
